cp-in und cp-ex ergänzt inkl. test; made with codex